--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>TODO - List</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-    <ul>
-        <% for(var i=0; i<tasks.length; i++) {%>
-           <li>
-               <a href="details/<%= i %>">            
-                    <%= tasks[i].title %>
-                </a> / 
-                <a href="edit/<%= i %>">
-                    edit
-                </a>         
-            </li>
-        <% } %>
-    </ul>
-    <a>new</a>
+    <div class="container">
+        <h1>TODO List</h1>
+        <ul>
+            <% for (var i = 0; i < tasks.length; i++){ %>
+                <li>
+                    <a href="details/<%= i %>">
+                        <%= tasks[i].title %>
+                    </a> /
+                    <a href="edit/<%= i %>">
+                        edit
+                    </a>
+                </li>
+            <% } %>
+        </ul>
+        <a href="">new</a>
+    </div>
+    
 </body>
+
 </html>
