--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-    <%= task.title %>
+    <div class="container">
+        <%= task.title %>
+    </div>
 </body>
+
 </html>
